--- a/first.html
+++ b/first.html
@@ -1,35 +1,24 @@
-<!DOCTYPE html> 
-<html> 
-  
-<head> 
-    <title> 
-        print current day and time 
-    </title> 
-</head> 
-  
-<body> 
-    <script type="text/javascript"> 
-        var myDate = new Date(); 
-        var myDay = myDate.getDay(); 
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Qestion 1, Day 2</title>
+</head>
+
+<body>
+
+    <h2>JavaScript getTime()</h2>
+    <b><p id="day"></p>
+    <p id="time"></p></b>
+
+    <script>
+        var d = new Date();
+        var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+        document.getElementById("day").innerHTML = "Today is: " + days[d.getDay()] + ".";
+        document.getElementById("time").innerHTML = 'The current time is: ' + d.getHours() + ':' + d.getMinutes() + ':' + d.getSeconds();
         
-        // Array of days. 
-        var weekday = ['Sunday', 'Monday', 'Tuesday', 
-            'Wednesday', 'Thursday', 'Friday', 'Saturday' 
-        ]; 
-        document.write("Today is : " + weekday[myDay]); 
-        document.write("<br/>"); 
-        
-        // get hour value. 
-        var hours = myDate.getHours(); 
-        var ampm = hours >= 12 ? 'PM' : 'AM'; 
-        hours = hours % 12; 
-        hours = hours ? hours : 12; 
-        var minutes = myDate.getMinutes(); 
-        minutes = minutes < 10 ? '0' + minutes : minutes; 
-        var myTime = hours + " " + ampm + " : " + minutes +  
-            " : " + myDate.getMilliseconds(); 
-        document.write("\tCurrent time is : " + myTime); 
-    </script> 
-</body> 
-  
-</html> 
+    </script>
+
+</body>
+
+</html>
